--- a/final_project/frontend/static/css/index.css
+++ b/final_project/frontend/static/css/index.css
@@ -15,5 +15,11 @@ html, body{
 #app{
     width: 100%;
     height: 100%;
-    display: flex;
+}
+
+.center {
+    position: absolute;
+    bottom: 50%;
+    right: 50%;
+    transform: translate(-50%, -50%);
 }
